# projetofinalcompiladores

./: pyproject.toml
exemplo/: start.lox
src/lox/: main.py  regex_scan.py  token.py
